Use scroll bars when the content in the right hand div contains words that can't be broken into pieces smaller than the div width. (Fixes #540296)

--- a/karl/views/static/themedstyles.css
+++ b/karl/views/static/themedstyles.css
@@ -506,7 +506,7 @@ a.chparent:hover {
 #right {
  	float: right;
 	width: 276px;
-	display:block;
+	display: block;
 	padding-top: 0px;
 	margin-left: 15px;
 	overflow: visible;
@@ -724,6 +724,7 @@ input#livesearch-input {
 	padding: 10px;
 	font-family: Verdana,Geneva,Arial,Helvetica,sans-serif;
 	margin-bottom: 10px;
+        overflow: auto;
 }
 #right div p {
 	margin: 7px 0;
